--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" href="%PUBLIC_URL%/images/favicon.ico" />
     <link rel="shortcut icon" href="https://www.kafkacoineth.com/home/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-    <title>Brownie Coin</title>
+    <title>Meta Legends</title>
     <meta name="title" content="Brownie Coin">
     <meta name="keywords" content="brownie coin">
     <meta name="description" content="Brownie Coin is a digital cryptocurrency known for its deliciously sweet returns. Learn more about Brownie Coin and how it's changing the world of digital finance.">
